--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Jack's Web Blog
 email: freyjr@hendrix.edu
-description: Here is where I log what is happening in my class # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: # this means to ignore newlines until "baseurl:"
+  This is where I log all of the things I'm doing in my CSCI 240 class.
 baseurl: "/csci340blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Forthcoming
